...
            ]),
            PlaceCategorySubcategoryGroup(title: "Attractions & games", subcategories: [
                "Aquarium", "Zoo", "Amusement park", "Water park", "Ferris wheel", "Roller coaster", "Arcade",
                "Bowling", "Mini golf", "Billiards", "Darts", "Axe throwing", "Board game lounge", "Go-karting",
                "Paintball", "Indoor playground", "Internet cafe", "Dance hall", "Barbecue area"
            ]),
            PlaceCategorySubcategoryGroup(title: "Events", subcategories: [
                "Event venue", "Convention center", "Banquet hall", "Wedding venue", "Community center"
            ])
        ],
        shopping: [
            PlaceCategorySubcategoryGroup(title: "General retail", subcategories: [
                "Store", "Market", "Shopping mall", "Department store", "General store", "Convenience store",
...
